--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,49 @@
 env:
   global:
     - CC_TEST_REPORTER_ID=7333f14d7dec91ddfbe8cc61ba1c6b3cbf4481e39f8e55dd70af599040af1b9c
+
+stages:
+  - test
+  - name: package
+    if: branch = master AND tag IS present
+
 language: python
 email:
     on_success: always
     on_failure: always
 python:
  - "3.6"
-before_script:
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
-script:
- - pytest --cov-report xml --cov=generic_parser tests
- - travis-sphinx build --source=doc/ --nowarn
-after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
-after_success:
- - travis-sphinx deploy
+
+jobs:
+  include:
+    - stage: test
+      before_script:
+        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        - chmod +x ./cc-test-reporter
+        - ./cc-test-reporter before-build
+      script:
+       - pytest --cov-report xml --cov=generic_parser tests
+       - travis-sphinx build --source=doc/ --nowarn
+      after_script:
+        - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+      after_success:
+       - travis-sphinx deploy
+
+    - stage: package
+      install:
+        - pip install twine
+      before_script:
+        - |
+          cat << EOF | tee ~/.pypirc 1>/dev/null
+          [distutils]
+          index-servers=
+              pypi
+
+          [pypi]
+            username: $PYPI_USERNAME
+            password: $PYPI_PASSWORD
+      script:
+        - python setup.py sdist bdist_wheel
+        - twine check dist/* 
+        - twine upload dist/*
+
