--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,11 @@
 [tool:pytest]
 codestyle_max_line_length = 100
 codestyle_exclude = doc/conf.py
+addopts= --cov-report xml --cov=generic_parser
 
 [pycodestyle]
 max-line-length = 100
 exclude = doc/conf.py
+
+[aliases]
+test=pytest
