#17 Add a new stage for doc on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ env:
 
 stages:
   - test
+  - name: documentation
+    if: tag =~ ^v\d+\.\d+\.\d+.*
   - name: package
     if: tag =~ ^v\d+\.\d+\.\d+.*
 
@@ -23,9 +25,14 @@ jobs:
         - ./cc-test-reporter before-build
       script:
        - pytest --cov-report xml --cov=generic_parser tests
-       - travis-sphinx build --source=doc/ --nowarn
       after_script:
         - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
+    - stage: documentation
+      install:
+        - pip install travis-sphinx sphinx_rtd_theme
+      script:
+       - travis-sphinx build --source=doc/ --nowarn
       after_success:
        - travis-sphinx deploy
 
