--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -72,7 +72,7 @@ jobs:
           chmod +x ./cc-test-reporter
           ./cc-test-reporter before-build
       - name: Run all tests
-        run: python -m pytest
+        run: python -m pytest --cov-report xml --cov=generic_parser
 
       - name: Push Coverage to CodeClimate
         if: ${{ success() }}  # only if tests were successful
